Remove VakantieVerhuur / VakantieverhuurAfmelding (#88)
